--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "dev": "node --env-file=.env src/index.js",
-    "start": "NODE_ENV=production node src/index.js"
+    "dev": "node --env-file=.env src/server.js",
+    "start": "NODE_ENV=production node src/server.js"
   },
   "dependencies": {
     "axios": "^1.7.7",
