--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
-PORT=4002
-DATABASE_URL=mysql://123321@localhost:3306/reviewsdb
-SCRAPER_BASE_URL=http://localhost:5050
-NODE_ENV=development
-CORS_ORIGIN=http://localhost:5173,http://127.0.0.1:5173,http://localhost:5174,http://127.0.0.1:5174
+PORT=4001
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=example
+DB_NAME=reviews_db
+FRONTEND_ORIGIN=http://localhost:5173
